--- a/tp2 (1).ipynb
+++ b/tp2 (1).ipynb
@@ -299,7 +299,7 @@
     "cipher = AES.new(k,AES.MODE_CBC,iv)\n",
     "decrypted = cipher.decrypt(c)\n",
     "unpaded_decrypted = unpad(decrypted,16)\n",
-    "print(\"msg dechiffre\" , unpaded_decrypted)\n",
+    "print(\"msg dechiffre  =\" , unpaded_decrypted.decode('utf-8'))\n",
     "\n",
     "\n",
     "# decrypted(c,k,iv)"
@@ -309,11 +309,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "msg dechiffre b'J\\xe2\\x80\\x99aime ces petits moments de calme avant la temp\\xc3\\xaate... \\xc3\\xa7a me rappelle Beethoven'\n"
+      "msg dechiffre  = J’aime ces petits moments de calme avant la tempête... ça me rappelle Beethoven\n"
      ]
     }
    ],
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {
     "execution": {
      "iopub.status.busy": "2020-10-11T21:28:56.015Z",
@@ -342,19 +342,36 @@
    "source": [
     "c = b\"\\xe7\\xa5\\xfd\\xe9\\xd9B*\\xa5iI\\xc9\\xbc\\x9d\\xe1\\x85\\x00'\\x91/\\xd2\\xd8\\x0b\\xa3lho\\xfd\"\n",
     "d = b'\\xe7\\xa5\\xfd\\xe9\\xd9B*\\xa5nC\\xcb\\xaf\\x9e\\xad\\xc1N\\x10\\x96>\\xd3\\xcd]\\xa0la!\\xf2'\n",
+    "\n",
+    "\n",
+    "nonce_c = c[:8]\n",
+    "nonce_d = d[:8]\n",
+    "print(\"Les deux messages chiffres ont-ils le même nonce?\" , nonce_c == nonce_d)\n",
     "e = strxor(c,d)\n",
-    "print(repr(e))"
+    "print(repr(e))\n",
+    "cc = c[8:]\n",
+    "dd = d[8:]\n",
+    "\n",
+    "hint = b\"Bravo ! C'est bien\"\n",
+    "hint2 =b\"Excellent travail\"\n",
+    "lng = len(hint)\n",
+    "\n",
+    "sortie_aes = strxor(cc[:lng], hint)\n",
+    "clair_d = strxor(dd[:lng], sortie_aes)\n",
+    "print(clair_d)\n"
    ],
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "b'\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x07\\n\\x02\\x13\\x03LDN7\\x07\\x11\\x01\\x15V\\x03\\x00\\tN\\x0f'\n"
+      "Les deux messages chiffres ont-ils le même nonce? True\n",
+      "b'\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x07\\n\\x02\\x13\\x03LDN7\\x07\\x11\\x01\\x15V\\x03\\x00\\tN\\x0f'\n",
+      "b'Excellent travail '\n"
      ]
     }
    ],
-   "execution_count": 6,
+   "execution_count": 47,
    "metadata": {
     "execution": {
      "iopub.status.busy": "2020-10-11T21:29:10.297Z",
@@ -411,7 +428,7 @@
     "    return bob(m) is not None"
    ],
    "outputs": [],
-   "execution_count": 7,
+   "execution_count": 48,
    "metadata": {
     "execution": {
      "iopub.status.busy": "2020-10-11T21:29:51.573Z",
@@ -450,11 +467,11 @@
    ],
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "pad(m) = b\"Coucou c'est moi !\\x0e\\x0e\\x0e\\x0e\\x0e\\x0e\\x0e\\x0e\\x0e\\x0e\\x0e\\x0e\\x0e\\x0e\"\n",
-      "c = b'\\xb1\\xfa\\x0e\\x18\\x05\\xf7\\x80U\\xe5\\x07\\xa8\\x1b(iY\\xabO`!$\\xf2y\\xd1\\x8fi\\xeeM}\\xd7\\xfc\\xc9yH\\x15\\x87]\\xe9\\x07\\xb2\\x91\\xdeG\\x80\\x90c\\x8d2X' (longueur : 3 blocs dont IV)\n",
+      "c = b'\\xa9\\x80\\x00\\xe9\\x18\\x9c\\xa8&\\\\\\x96\\xb9g\\xfbns\\x1c\\xc2b\\xd0\\xa7\\x7f\\x8e\\xb5\\x15-\\x93\\x10\\xf7|\\xa3\\xa5\\x87\\xb7\\xe3c(\\x8fNdj\\xa36v3\\xca\\xe5W\\xab' (longueur : 3 blocs dont IV)\n",
       "oracle(c) = True\n",
       "bob(c) = b\"Coucou c'est moi !\"\n",
       "oracle(d) = False\n",
@@ -462,7 +479,7 @@
      ]
     }
    ],
-   "execution_count": 8,
+   "execution_count": 49,
    "metadata": {
     "execution": {
      "iopub.status.busy": "2020-10-11T21:30:06.313Z",
@@ -517,16 +534,28 @@
     "iv=c[:16]\n",
     "b=c[16:32]\n",
     "\n",
-    "def flip(c,j):\n",
-    "    # TODO\n",
-    "    pass\n",
+    "def flip(iv,j):\n",
+    "    \"\"\"Retourne lIV dont le dernier a été modifié : c[-1] ^ j \"\"\"\n",
+    "    t = bytearray(iv)\n",
+    "    t[-1] = t[-1] ^ j\n",
+    "    return bytes(t)\n",
     "\n",
-    "for j in range(256):\n",
-    "    # TODO\n",
-    "    pass"
+    "for j in range(256): #on va test toutes les modif du dernier octet\n",
+    "    tentative = flip(iv,j)\n",
+    "    if oracle(tentative + b): #si Bob arrive a dechiffrer et \"unpadder\" on a trouvé\n",
+    "        print(\"Avec j ={} ça marche! Donc le dernier caractere est un '{}' code ASCII {}\".format(j, chr(j+1),j+1))\n",
+    "        break"
    ],
-   "outputs": [],
-   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Avec j =104 ça marche! Donc le dernier caractere est un 'i' code ASCII 105\n"
+     ]
+    }
+   ],
+   "execution_count": 50,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
